# QuantLite

./: .gitignore  .travis.yml  CMakeLists.txt  bert.cpp  conanfile.py  conanfile.txt  readme.md
src/: CMakeLists.txt
src/containers/: currency.h  market.h  trade.cpp  trade.h
src/static/: conventions.h
src/utils/: erfinv.cpp  utils.h
test/: CMakeLists.txt  test_black_scholes.cpp  test_g_test.cpp
